Expand `README` and introduce `sample-apps` section with comprehensive descriptions of new example applications. Add `start.sh` and `stop.sh` helper scripts for `state-checkpoint-demo`.